--- a/about.css
+++ b/about.css
@@ -102,3 +102,37 @@
     margin-left: -230px;
     font-weight: bold;
 }
+
+
+/* What we do */
+
+#OurSoftware {
+    font-size: 35px;
+    text-align: center;
+    margin-top: 100px;
+    color: black;
+}
+
+#SoftwarePackages {
+    margin-top: 100px;
+    font-size: 35px;
+    text-align: center  ;
+}
+
+.Group1 {
+    margin-top: 20px;
+    padding: 40px 61px 36px 28px;
+    border-radius: 15px;
+    background-color: #CBDDFF;
+    text-align: justify;
+    height: 320px;
+}
+
+.bi-code-square, .bi-phone, .bi-card-text, .bi-gear, .bi-terminal, .bi-braces {
+    font-size: 50px;
+}
+
+#ETRIS, #SPMS, #POS, #SPA, #DCM, #CS{
+    padding-top: 10px;
+    font-weight: bold;
+}
