--- a/contact.css
+++ b/contact.css
@@ -48,7 +48,6 @@
     padding-bottom: 8px;
     font-size: 13px;
     text-align: left;
-    font-weight: lighter;
     color: #000;
     font-family: 'Lato-regular';
 }
@@ -66,7 +65,6 @@
     margin-top: -10px;
     padding-bottom: 20px;
     font-size: 13px;
-    font-weight: lighter;
     color: #000;
     font-family: 'Lato-regular';
 }
@@ -76,7 +74,6 @@
     margin-top: -10px;
     padding-bottom: 20px;
     font-size: 13px;
-    font-weight: lighter;
     color: #000;
     font-family: 'Lato-regular';
 }
@@ -153,7 +150,7 @@
 #ContactUsBtn {
     width: 200px;
     height: 60px;
-    font-weight: bold;
+    font-family: 'Lato-bold';
     font-size: 15px;
     margin-top: 15px;
     margin-left: -75px;
@@ -165,14 +162,13 @@
 #ContactUsBTNLM {
     width: 200px;
     height: 60px;
-    font-weight: bold;
     font-size: 15px;
     margin-top: 30px;
     margin-left: -75px;
     margin-bottom: 30px;
     margin-left: 5px;
     background-color: #E8AB42;
-    font-family: 'Lato-regular';
+    font-family: 'Lato-bold';
 }
 
 /* Preparing Business */
@@ -226,20 +222,20 @@
 
 #ContactQL {
     margin-left: 70px;
-    font-weight: bold;
+    font-family: 'Lato-bold';
     font-size: 20px;
     margin-top: 15px;
 }
 
 #PhoneQL {
-    font-weight: bold;
+    font-family: 'Lato-bold';
     font-size: 20px;
     margin-top: 13px;
     margin-left: -40px;
 }  
 
 #EmailQL {
-    font-weight: bold;
+    font-family: 'Lato-bold';
     font-size: 20px;
     margin-top: 13px;
     margin-left: -10px;
@@ -250,19 +246,19 @@
     margin-left: 70px;
     margin-top: -5px;
     font-size: 13px;
-    font-weight: lighter;
+    font-family: 'Lato-regular';
 }
 
 #PhonePQL {
     margin-top: -5px;
     margin-left: -40px;
     font-size: 13px;
-    font-weight: lighter;
+    font-family: 'Lato-regular';
 }
 
 #EmailPQL {
     margin-top: -5px;
     margin-left: -10px;
     font-size: 13px;
-    font-weight: lighter;
+    font-family: 'Lato-regular';
 }
