--- a/about.css
+++ b/about.css
@@ -102,7 +102,7 @@
     margin-top: 100px;
     font-size: 25px;
     text-align: center  ;
-    font-family: 'Lato-bold';
+    font-family: 'Lato-Semibold';
     text-transform: uppercase;
 }
 
@@ -122,6 +122,6 @@
     height: 350px;
 }
 
-.bi-code-square, .bi-phone, .bi-card-text, .bi-gear, .bi-terminal, .bi-braces {
+.bi-kanban ,.bi-code-square, .bi-phone, .bi-card-text, .bi-gear, .bi-terminal, .bi-braces {
     font-size: 50px;
 }
