--- a/contact.css
+++ b/contact.css
@@ -1,8 +1,6 @@
 /* Get In Touch */
 
 .GetInTouchSection {
-    background-color: #2A5D9A;
-    background-image: url(Pics/abstractbg4.png);
     background-blend-mode: overlay;
     z-index: 1;
 }
@@ -10,13 +8,13 @@
 #MonthlyProjects {
     margin-top: -10px;
     margin-bottom: -15px;
-    color: white;
+    color: black;
     font-family: 'Lato-regular';
 }
 
 #WeHaveManyReviewsGIT {
-    font-size: 20px;
-    color: white;
+    font-size: 25px;
+    color: black;
     font-family: 'Lato-light';
     margin-bottom: 30px;
 }
@@ -24,7 +22,7 @@
 #GetInTouch{
     margin-top: 100px;
     font-size: 35px;
-    color: white;
+    color: #E8AB42;
     font-family: 'Lato-bold';
 }
 
@@ -87,16 +85,19 @@
 #GetInTouchText {
     margin-top: -10px;
     margin-bottom: 150px;
-    color: white;
+    color: black;
     font-family: 'Lato-regular';
 }
 
 /* Map */
 
 .map-area {
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
     margin-top: -140px;
+    border-radius: 8px; 
     margin-bottom: -295px;
     z-index: 2;
+    overflow: hidden;
 }
 
 /* Send your Message */
