--- a/contact.css
+++ b/contact.css
@@ -192,12 +192,23 @@
 }
 
 #QuickLinks {
-    margin-top: 0;
+    margin-top: 30px;
+    font-weight: bold;
     font-size: 20px;
+    font-family: 'Lato-regular';
+    color: white;
+    text-decoration: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#QuickLinks:hover {
+    color: #E8AB42;
 }
 
 .custome-line {
-    width: 100px;
+    width: 133px;
     color: #1E4590;
     border-top: 1px solid white;
 }
