--- a/contact.css
+++ b/contact.css
@@ -2,6 +2,8 @@
 
 .GetInTouchSection {
     background-blend-mode: overlay;
+    background-color: #FFFAFA;
+    height: 1200px;
     z-index: 1;
 }
 
@@ -103,7 +105,7 @@
 /* Send your Message */
 
 #SendYourMessage {
-    margin-top: 400px;
+    margin-top: 100px; 
     font-size: 25px;
     color: #140E34;
     font-family: 'Lato-regular';
@@ -120,7 +122,7 @@
 }
 
 #SendYourMessageR {
-    margin-top: 400px;
+    margin-top: 100px;
     font-family: 'Lato-regular';
 }
 
